[gd_scene load_steps=5 format=3 uid="uid://bfaaxf0qg36k6"]

[ext_resource type="Script" path="res://Game/HUD/HUD.gd" id="1_c6tig"]
[ext_resource type="PackedScene" uid="uid://f2ro8hkm550c" path="res://Game/HUD/objetivePanel.tscn" id="1_ydi1f"]

[sub_resource type="Animation" id="Animation_nuuee"]
resource_name = "open"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ObjetivesContainer/CenterContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Vector2(0, -200), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_po16g"]
_data = {
"open": SubResource("Animation_nuuee")
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_c6tig")
objective_panel = ExtResource("1_ydi1f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_po16g")
}

[node name="OffsetObjetives" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ObjetivesContainer" type="PanelContainer" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 75.0
grow_vertical = 2
theme_type_variation = &"PanelContainerVariant"

[node name="CenterContainer" type="CenterContainer" parent="ObjetivesContainer"]
layout_mode = 2

[node name="ObjetivesPanelContainer" type="VBoxContainer" parent="ObjetivesContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[connection signal="timeout" from="OffsetObjetives" to="." method="_on_offset_objetives_timeout"]
